--- a/requirements.txt
+++ b/requirements.txt
@@ -1,109 +1,8 @@
-appdirs==1.4.4
-apsw
-astroid==2.4.2
-autopep8==1.5.4
-beautifulsoup4==4.8.2
-blinker==1.4
-certifi==2019.11.28
-chardet==3.0.4
-Click==7.0
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-css-parser==1.0.4
-cssselect==1.1.0
-cssutils==1.0.2
-cupshelpers==1.0
-cycler==0.10.0
-dbus-python==1.2.16
-defer==1.0.6
-distlib==0.3.1
-distro==1.4.0
-distro-info===0.23ubuntu1
-dnspython==1.16.0
-entrypoints==0.3
-feedparser==5.2.1
-filelock==3.0.12
-html2text==2020.1.16
-html5-parser==0.4.9
-html5lib==1.0.1
-httplib2==0.14.0
-idna==2.8
-ifaddr==0.1.6
-isort==5.6.4
-keyring==18.0.1
-kiwisolver==1.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lazy-object-proxy==1.4.3
-louis==3.12.0
-lxml==4.5.0
-macaroonbakery==1.3.1
-Markdown==3.1.1
-matplotlib==3.1.2
-mccabe==0.6.1
-mechanize==0.4.5
-msgpack==0.6.2
-netifaces==0.10.4
-nose==1.3.7
-numpy==1.17.4
-oauthlib==3.1.0
-olefile==0.46
-packaging==20.3
-pbr==5.5.0
-pexpect==4.6.0
-Pillow==7.0.0
-Pivy==0.6.5
-protobuf==3.6.1
-pycairo==1.16.2
-pychm==0.8.6
-pycodestyle==2.6.0
-pycups==1.9.73
-Pygments==2.3.1
-PyGObject==3.36.0
-PyJWT==1.7.1
-pylint==2.6.0
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyparsing==2.4.6
-PyQt5==5.14.1
-PyQtWebEngine==5.14.0
-pyRFC3339==1.1
-python-apt==2.0.0+ubuntu0.20.4.5
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-pytz==2019.3
-pyudev==0.21.0
-pyxdg==0.26
-PyYAML==5.3.1
-regex==2019.8.19
-reportlab==3.5.34
-repoze.lru==0.7
-requests==2.22.0
-requests-unixsocket==0.2.0
-Routes==2.4.1
-SecretStorage==2.3.1
-simplejson==3.16.0
-sip==4.19.21
-six==1.14.0
-soupsieve==1.9.5
--e git+https://github.com/sandorfoldi/dtu_mlops_vanilla_classifier.git@2c4a471974d08719a67ae5df748445efff89c857#egg=src
-stevedore==3.2.2
-systemd-python==234
-toml==0.10.1
-ubuntu-advantage-tools==27.2
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-virtualenv==20.0.34
-virtualenv-clone==0.5.4
-virtualenvwrapper==4.8.4
-wadllib==1.3.3
-webencodings==0.5.1
-WebOb==1.8.5
-wrapt==1.12.1
-xkit==0.0.0
-zeroconf==0.24.4
+click==8.0.3
+matplotlib==3.5.1
+numpy==1.21.2
+opencv_python==4.5.5.62
+python-dotenv==0.19.2
+scikit_learn==1.0.2
+setuptools==60.2.0
+torch==1.10.1
