--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+# external requirements
 click==8.0.3
 matplotlib==3.5.1
 numpy==1.21.2
 opencv_python==4.5.5.62
-python-dotenv==0.19.2
+python_dotenv==0.19.2
 scikit_learn==1.0.2
 setuptools==60.2.0
 torch==1.10.1
+python_dotenv
+
+# local package
+-e .
+
+
